[gd_scene load_steps=16 format=3 uid="uid://dgnw1b448pvox"]

[ext_resource type="Script" uid="uid://dljjh07p2blrg" path="res://scenes/ui/options_window/options_window.gd" id="1_cgnwa"]

[sub_resource type="Gradient" id="Gradient_8ndef"]
colors = PackedColorArray(0.17355, 0.17355, 0.17355, 1, 0.293216, 0.240169, 0.0787779, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_wi1cf"]
noise_type = 3
seed = 1024
frequency = 0.0106

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_jo3vu"]
color_ramp = SubResource("Gradient_8ndef")
noise = SubResource("FastNoiseLite_wi1cf")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cgnwa"]
content_margin_left = 10.0
content_margin_top = 5.0
content_margin_right = 10.0
content_margin_bottom = 5.0
bg_color = Color(0.634947, 0.515731, 0.182196, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s6ior"]
bg_color = Color(0.192597, 0.205263, 0.206591, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u2pi6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j2f6q"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pvk6m"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gwp5h"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ppx5"]
bg_color = Color(0.363388, 0.0975401, 0.054111, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.927697, 0.952031, 0.779962, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ary0j"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5asl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bb1xq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u2pi6"]
bg_color = Color(0.227451, 0.227451, 0.227451, 0.752941)

[node name="OptionsWindow" type="Control" node_paths=PackedStringArray("window_mode", "window_vsync", "window_resolution", "see_clock", "isolate_cursor", "see_life_and_mana", "device", "general_volume")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgnwa")
window_mode = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Mode/OptionButton")
window_vsync = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/VSYNC/CheckBox")
window_resolution = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Resolution/OptionButton")
see_clock = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/Clock/CheckBox")
isolate_cursor = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/IsolateCursor/CheckBox")
see_life_and_mana = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/SeeLifeMana/CheckBox")
device = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Device/OptionButton")
general_volume = NodePath("HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Volume/HSlider")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Window" type="Control" parent="HBoxContainer"]
custom_minimum_size = Vector2(700, 0)
layout_mode = 2

[node name="BackgroundColor" type="ColorRect" parent="HBoxContainer/Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.263475, 0.259659, 0.25296, 1)

[node name="BackgroundTexture" type="TextureRect" parent="HBoxContainer/Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("NoiseTexture2D_jo3vu")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Window/MarginContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Window/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
color = Color(0.231228, 0.212277, 0.049562, 1)

[node name="Title" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_cgnwa")
text = "Options"

[node name="ColorRect2" type="ColorRect" parent="HBoxContainer/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
color = Color(0.08617, 0.0682436, 0.018055, 1)

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Tabs" type="TabContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s6ior")
tab_alignment = 1
current_tab = 0

[node name="Graphismes" type="TabBar" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs"]
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Options d'affichage"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mode" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Mode"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mode"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Mode"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="VSYNC" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/VSYNC"]
layout_mode = 2
size_flags_horizontal = 3
text = "Synchro verticale"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/VSYNC"]
layout_mode = 2

[node name="Resolution" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3
text = "Résolution de la fenêtre"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Resolution"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Jeu" type="TabBar" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Jeu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Jeu/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Jeu/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Interface" type="TabBar" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Général"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Clock" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/Clock"]
layout_mode = 2
size_flags_horizontal = 3
text = "Afficher l'horloge"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/Clock"]
layout_mode = 2

[node name="IsolateCursor" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/IsolateCursor"]
layout_mode = 2
size_flags_horizontal = 3
text = "Isoler le curseur dans la fenêtre"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/IsolateCursor"]
layout_mode = 2

[node name="Label2" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Préférences de jeu"

[node name="HSeparator2" type="HSeparator" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SeeLifeMana" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/SeeLifeMana"]
layout_mode = 2
size_flags_horizontal = 3
text = "Voir les valeurs de vie et mana"

[node name="CheckBox" type="CheckBox" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/SeeLifeMana"]
layout_mode = 2

[node name="Son" type="TabBar" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Général"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Device" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Device"]
layout_mode = 2
size_flags_horizontal = 3
text = "Périphérique"

[node name="OptionButton" type="OptionButton" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Device"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Volume" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Volume général"

[node name="HSlider" type="HSlider" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Volume"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 60.0
rounded = true

[node name="Contrôles" type="TabBar" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs"]
visible = false
layout_mode = 2
tab_alignment = 1
metadata/_tab_index = 4

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Contrôles"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Contrôles/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Contrôles/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 20

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Save" type="Button" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Enregistrer"

[node name="Default" type="Button" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Par défaut"

[node name="Close" type="Button" parent="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer/Buttons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
text = "Fermer"

[node name="CloseButton" type="Button" parent="HBoxContainer/Window/MarginContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.847769, 0.875197, 0.618694, 1)
theme_override_styles/focus = SubResource("StyleBoxEmpty_u2pi6")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_j2f6q")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_pvk6m")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_gwp5h")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_0ppx5")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ary0j")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ppx5")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_b5asl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0ppx5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_bb1xq")
theme_override_styles/normal = SubResource("StyleBoxFlat_0ppx5")
text = "X"

[node name="Panel" type="Panel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_u2pi6")

[connection signal="item_selected" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Mode/OptionButton" to="." method="_on_window_mode_selected"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/VSYNC/CheckBox" to="." method="_on_window_vsync_pressed"]
[connection signal="item_selected" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Graphismes/ScrollContainer/MarginContainer/VBoxContainer/Resolution/OptionButton" to="." method="_on_window_resolution_selected"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/Clock/CheckBox" to="." method="_on_see_clock_pressed"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/IsolateCursor/CheckBox" to="." method="_on_isolate_cursor_pressed"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Interface/ScrollContainer/MarginContainer/VBoxContainer/SeeLifeMana/CheckBox" to="." method="_on_see_life_mana_pressed"]
[connection signal="item_selected" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Device/OptionButton" to="." method="_on_audio_device_selected"]
[connection signal="changed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/ColorRect2/MarginContainer/Tabs/Son/ScrollContainer/MarginContainer/VBoxContainer/Volume/HSlider" to="." method="_on_general_volume_changed"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer/Buttons/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer/Buttons/Default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/VBoxContainer/MarginContainer/Buttons/Close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="HBoxContainer/Window/MarginContainer/CloseButton" to="." method="_on_close_button_pressed"]
